@@ -118,11 +118,13 @@
 <a href="#cvs">&lt;cvs&gt;</a>
 <a href="#cvsbootstrapper">&lt;cvsbootstrapper&gt;</a>
 <a href="#dateformat">&lt;dateformat&gt;</a>
+<a href="#delete">&lt;delete&gt;</a>
 <a href="#email">&lt;email&gt;</a>
 <a href="#execute">&lt;execute&gt;</a>
 <a href="#filesystem">&lt;filesystem&gt;</a>
 <a href="#forceonly">&lt;forceonly&gt;</a>
 <a href="#ftppublisher">&lt;ftppublisher&gt;</a>
+<a href="#gzip">&lt;gzip&gt;</a>
 <a href="#htmlemail">&lt;htmlemail&gt;</a>
 <a href="#httpfile">&lt;httpfile&gt;</a>
 <a href="#jabber">&lt;jabber&gt;</a>
@@ -260,6 +262,8 @@
       &lt;/schedule&gt;
       <a href="#log">&lt;log&gt;</a>
          <a href="#merge">&lt;merge/&gt;</a>
+	 <a href="#gzip">&lt;gzip/&gt;</a>
+	 <a href="#delete">&lt;delete/&gt;</a>
       &lt;/log&gt;
       <a href="#publishers">&lt;publishers&gt;</a>
          <a href="#antpublisher">&lt;antpublisher/&gt;</a>
@@ -4629,7 +4633,19 @@ endlocal</pre>
                 <td><a href="#merge"><code>&lt;merge&gt;</code></a></td>
                 <td>0 .. *</td>
                 <td>Merges log file together.</td>
-            </tr>
+	    </tr>
+            <tr>
+                <td><a href="#gzip"><code>&lt;gzip&gt;</code></a></td>
+                <td>0 .. 1</td>
+                <td>GZips old log files</td>
+	    </tr>
+            <tr>
+                <td><a href="#delete"><code>&lt;delete&gt;</code></a></td>
+                <td>0 .. 1</td>
+                <td>Deletes old log files.</td>
+	    </tr>
+
+	
             </tbody>
         </table>
         </div>
@@ -4684,6 +4700,92 @@ endlocal</pre>
             </tr>
            </tbody>
         </table>
+	
+        <div class="elementdocumentation">
+        <a class="toplink" href="#top">top</a>
+        <h2><a name="gzip">&lt;gzip&gt;</a></h2>
+	
+        <div class="hierarchy">
+            <pre>
+<a href="#cruisecontrol">&lt;cruisecontrol&gt;</a>
+  <a href="#project">&lt;project&gt;</a>
+    <a href="#log">&lt;log&gt;</a>
+      &lt;gzip&gt;</pre>
+        </div>
+
+        <p>After the build-file is written, this manipulator gzips all old log files
+	that may exist.</p>
+
+        <h3>Attributes</h3>
+
+        <table class="documentation">
+            <thead>
+            <tr>
+               <th>Attribute</th>
+               <th>Required</th>
+               <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+               <td>every</td>
+               <td>true</td>
+               <td>Sets the amount of Units after which the logfiles are backuped.</td>
+            </tr>
+            <tr>
+               <td>unit</td>
+               <td>true</td>
+               <td>The Unit for backups. Valid Units are DAY, WEEK, MONTH or YEAR</td>
+            </tr>
+           </tbody>
+        </table>
+	</div>
+	
+        <div class="elementdocumentation">
+        <a class="toplink" href="#top">top</a>
+        <h2><a name="delete">&lt;delete&gt;</a></h2>
+	
+        <div class="hierarchy">
+            <pre>
+<a href="#cruisecontrol">&lt;cruisecontrol&gt;</a>
+  <a href="#project">&lt;project&gt;</a>
+    <a href="#log">&lt;log&gt;</a>
+      &lt;delete&gt;</pre>
+        </div>
+
+        <p>After the build-file is written, this manipulator deletes all old log files
+	that may exist.</p>
+
+        <h3>Attributes</h3>
+
+        <table class="documentation">
+            <thead>
+            <tr>
+               <th>Attribute</th>
+               <th>Required</th>
+               <th>Description</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+               <td>every</td>
+               <td>true</td>
+               <td>Sets the amount of Units after which the logfiles are backuped.</td>
+            </tr>
+            <tr>
+               <td>unit</td>
+               <td>true</td>
+               <td>The Unit for backups. Valid Units are DAY, WEEK, MONTH or YEAR</td>
+            </tr>
+            <tr>
+               <td>ignoreSuffix</td>
+               <td>true</td>
+               <td>Ignores default xml-suffix when deleting files, so other logfiles could be deleted</td>
+            </tr>	    
+           </tbody>
+        </table>
+	</div>
+	
         </div>
 
         <div class="elementdocumentation">
